# ProyectDatos2

./: CMakeLists.txt  ImageLoader.cpp  ImageLoader.h  main.cpp
Headers/: ApplicationManager.h  ArduinoManagement.h  Bullet.h  BulletCollector.h  Bullets.h  EnemyList.h  EnemyManager.h  EnemyShip.h  Entities.h  GameControls.h  GameMechanics.h  GameModeScreen.cpp  GameModeScreen.h  GameOverScreen.h  GameScreen.h  MainScreen.h  Player.h  PowerLoaded.h  Powers.h  SettingsScreen.h  SfmlButton.h  Strategies.h  Waves.h  WindowState.h
Headers/LInkedListFilesHeaders/: LinkedListStructured.h  Node.h  SimpleLinkedList.h  WindowStatesStack.h  gameStateStack.h  sfmlTexturesList.h  texturesRoutes.h  windowStateStack.h
Source/: ApplicationManager.cpp  ArduinoManagement.cpp  Bullet.cpp  BulletCollector.cpp  Bullets.cpp  EnemyList.cpp  EnemyList.h  EnemyManager.cpp  EnemyShip.cpp  Entities.cpp  GameControls.cpp  GameMechanics.cpp  GameModeScreen.cpp  GameOverScreen.cpp  GameScreen.cpp  MainScreen.cpp  Player.cpp  PowerLoaded.cpp  Powers.cpp  SettingsScreen.cpp  SfmlButton.cpp  Strategies.cpp  Waves.cpp  WindowState.cpp  arduinoConnectionTest.cpp
Source/LInkedLIstFIlesSources/: LinkedListStructured.cpp  Node.cpp  SimpleLinkedList.cpp  WindowStatesStack.cpp  gameStateStack.cpp  sfmlTexturesList.cpp  texturesRoutes.cpp  windowStateStack.cpp
Strategies/: StrategyFour.xml  StrategyThree.xml  StrategyTwo.xml
html/: ApplicationManager_8cpp_source.html  ArduinoManagement_8cpp_source.html  BulletCollector_8cpp_source.html  Bullet_8cpp_source.html  EnemyList_8cpp_source.html  EnemyShip_8cpp_source.html  Entities_8cpp_source.html  GameModeScreen_8cpp_source.html  GameOverScreen_8cpp_source.html  GameScreen_8cpp_source.html  MainScreen_8cpp_source.html  Player_8cpp_source.html  PowerLoaded_8cpp_source.html  SettingsScreen_8cpp_source.html  SfmlButton_8cpp_source.html  Strategies_8cpp_source.html  WindowState_8cpp_source.html  annotated.html  arduinoConnectionTest_8cpp_source.html  classSerialReceiver-members.html  classSerialReceiver.html  classes.html  files.html  index.html
html/search/: all_0.js
sketchBetaProyecto/: sketchBetaProyecto.ino
